Initial commit, menu functional (no additional pages yet).

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Dayton Direct Action",
+  "name": "Helping the homeless of Dayton Ohio through direct action.",
   "icons": [
     {
       "src": "favicon.ico",
